# f1tenth-offroad-livox

./: README.md
00_getting_started/: livox-lidar-setup.md  localization_mapping.md
02_perception/point_cloud_undistortion/: CMakeLists.txt  package.xml
02_perception/pointcloud_bbox_filter/: CMakeLists.txt  package.xml
02_perception/pointcloud_bbox_filter/config/: box_filter_params.yaml
02_perception/pointcloud_bbox_filter/include/pointcloud_bbox_filter/: pcl_bbox_filter.hpp
02_perception/pointcloud_bbox_filter/launch/: box_filter.launch.py
02_perception/pointcloud_bbox_filter/src/: bbox_filter_node.cpp  pcl_bbox_filter.cpp
07_sim/isaac_sim_roboracer/roboracer_assets/: setup.py
07_sim/isaac_sim_roboracer/roboracer_assets/config/: extension.toml
07_sim/isaac_sim_roboracer/roboracer_assets/data/terrains/: .asset_hash  config.yaml
07_sim/isaac_sim_roboracer/roboracer_assets/data/terrains/Props/: instanceable_meshes.usd
07_sim/isaac_sim_roboracer/roboracer_assets/data/terrains/bump_track/: .asset_hash  bump_track.usd  config.yaml
07_sim/isaac_sim_roboracer/roboracer_assets/data/terrains/bump_track/Props/: instanceable_meshes.usd
07_sim/isaac_sim_roboracer/roboracer_assets/roboracer_assets/: __init__.py  hound.py  leatherback.py  mushr.py  non_planar_terrain.py  utils.py
07_sim/isaac_sim_roboracer/roboracer_assets/test/: create_robot_scene.py  create_robot_scene2.py  data_processing_nmpc.py  data_record.npz  data_validation_nmpc.py
07_sim/non_planar_tracks/: main.py  pyproject.toml
07_sim/non_planar_tracks/surfaces/: off_camber_bank.py  on_camber_bank.py  single_bump.py  stitch.py  turning.py
07_sim/non_planar_tracks/track_config/: track1.json  track2.json
